--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
- @font-face {
+@font-face {
   font-family: "Super Bubble";
   src: url(asset/font/Super\ Bubble.ttf);
 }
@@ -28,7 +28,7 @@ nav {
 }
 .circle {
   width: 800px;
-  height: 800px;
+  height: 850px;
   background-color: #ef5124;
   border-radius: 100%;
   position: absolute;
@@ -38,10 +38,9 @@ nav {
   display: flex;
   align-items: center;
 }
-.group-pets{
+.group-pets {
   width: 50px;
   overflow: hidden;
-
 }
 .pet-list {
   display: flex;
@@ -68,9 +67,8 @@ a {
 .auth button {
   background-color: transparent;
   border: none;
-  /* padding-inline: 20px; */
   font-size: 23px;
-  font-weight:600;
+  font-weight: 600;
   font-family: Poppins;
   padding: 5px 7px;
   text-align: center;
@@ -83,19 +81,13 @@ a {
   height: 100%;
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
-  
-  
-  
 }
-.mainvw h1{
+.mainvw h1 {
   font-family: "Super Bubble";
   color: #ef5124;
   width: 450px;
   font-size: 38px;
-
-
-  
-} 
+}
 .mainvw {
   display: flex;
   flex-direction: column;
@@ -106,7 +98,7 @@ a {
 .btn-Shopnow {
   width: 170px;
   border-radius: 50px;
-  background: #1B333C;
+  background: #1b333c;
   color: #fff;
   border: none;
   padding: 10px 25px;
@@ -118,21 +110,21 @@ a {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  
 }
 #info {
   height: 100px;
   width: 100%;
   background-color: #ef5124;
-  margin-top: 99px;
+  margin-top: 265px;
   /* position: absolute; */
   display: flex;
   gap: 300px;
 }
-.discount, .promo {
+.discount,
+.promo {
   height: 194px;
   width: 159px;
-  background-color: #FFFFCD;
+  background-color: #ffffcd;
   position: relative;
   top: -90px;
   margin-left: 80px;
@@ -151,7 +143,6 @@ a {
   display: flex;
   align-items: center;
   margin-top: 99px;
-
 }
 .discount-container {
   /* position: absolute; */
@@ -165,15 +156,12 @@ a {
   font-family: Poppins;
   color: #fff;
   gap: 80px;
-
 }
 .legs {
   position: absolute;
   left: 700px;
   top: 350px;
-  
 }
 #About {
   /* margin-top: 2000px; */
-
-} 
+}
