--- a/style.css
+++ b/style.css
@@ -11,20 +11,24 @@ body {
 }
 .menu {
   display: flex;
-  gap: 80px;
+  gap: 35px;
 }
 .menu li {
   list-style: none;
   font-family: Poppins;
   font-weight: 500;
-  font-size: 22px;
+  font-size: 18px;
 }
-nav {
+.navbar {
   display: flex;
   align-items: center;
   justify-content: space-around;
   width: 100vw;
   gap: 50px;
+}
+.navbar img {
+  width: 70px;
+  height: 70px;
 }
 .circle {
   width: 800px;
@@ -60,14 +64,13 @@ a {
   display: flex;
   align-items: center;
   overflow: hidden;
-  /* padding: 13px; */
-  width: 189px;
+  width: 180px;
   justify-content: space-between;
 }
 .auth button {
   background-color: transparent;
   border: none;
-  font-size: 23px;
+  font-size: 20px;
   font-weight: 600;
   font-family: Poppins;
   padding: 5px 7px;
