--- a/style.css
+++ b/style.css
@@ -253,9 +253,18 @@ a {
   display: flex;  
   justify-content: center;  
   gap: 40px;  
+  margin-top: 60px;
 }  
 
 .category-item {  
+  display: flex;  
+  flex-direction: column;  
+  align-items: center;   
+}  
+
+.category-item img {  
+  width: 80px;  
+  height: 80px;  
   display: flex;  
   flex-direction: column;  
   align-items: center;  
@@ -265,46 +274,73 @@ a {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Shadow effect */  
 }  
 
-.category-item img {  
-  width: 80px;  
-  height: 80px;  
-}  
-
 .category-item p {  
   margin-top: 10px;  
   font-weight: bold;  
+  font-family: 'Poppins';
 }
 
-/* Product Carousel */
-/* .product-carousel {
+.product-carousel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #FF4500;
   padding: 40px 0;
+  border-radius: 10px;
+  margin: 80px auto;
+  width: 1300px;
 }
 
 .products {
   display: flex;
   justify-content: center;
-  gap: 20px;
+  gap: 35px;
 }
 
-.product {
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 10px;
-  width: 150px;
-  text-align: center;
-}
+.product {  
+  background-color: #173340;  
+  padding: 20px;  
+  border-radius: 10px;  
+  width: 150px;  
+  text-align: center;  
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);  
+}  
 
-.product img {
-  width: 100px;
-  height: 100px;
-  object-fit: cover;
-  margin-bottom: 10px;
-}
+.product img {  
+  width: 100px;  
+  height: 100px;  
+  object-fit: cover;   
+  flex-direction: column;  
+  align-items: center;  
+  background-color: white;
+  position: relative;
+  top: -20px;
+  left: 50%; 
+  transform: translateX(-50%); 
+  padding: 10px; 
+  border-radius: 10px; 
+}  
 
-.product p {
-  margin: 5px 0;
-} */
+.product p {  
+  margin: 5px 0;  
+  font-family: 'Poppins';
+  color: white;
+}  
+
+.price {  
+  font-weight: bold;  
+}  
+
+.rating {  
+  color: #FFD700; /* Gold color for stars */  
+}  
+
+.favorite {  
+  background: none;  
+  border: none;  
+  cursor: pointer;  
+  font-size: 20px;  
+}  
 
 /* Our Services Section */
 /* .services-section {
