--- a/style.css
+++ b/style.css
@@ -372,7 +372,7 @@ a {
 
 .products {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   gap: 35px;
 }
 
@@ -384,17 +384,24 @@ a {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+.bg-img {
+  background-color: white;
+  border-radius: 10px;
+  height: 170px;
+  width: 150px;
+  object-fit: contain;
+}
+  
 .product img {
   width: 100px;
   height: 100px;
+  margin: 20px;
   object-fit: cover;
-  background-color: white;
   position: relative;
-  top: -20px;
   left: 40%;
   transform: translateX(-50%);
-  padding: 10px;
-  border-radius: 10px;
+  /* padding: 10px; */
+  border-radius: 10px; 
 }
 
 .product p {
