--- a/style.css
+++ b/style.css
@@ -146,6 +146,29 @@ a {
   top: -150px;
   left: -80px;
 }
+
+.imgPromo{
+  width: 80px;
+  position: absolute;
+  bottom: 10px;
+  transform: translateX(150%);
+  margin-top: 200px;
+}
+
+.imgPromo2 {
+  width: 90px;
+  position: absolute;
+  bottom: 10px;
+  transform: translateX(-100%);
+  margin-top: 125px;
+}
+
+.discount img:nth-child(2) {
+  position: absolute;
+  top: -150px;
+  left: -80px;
+}
+
 .promo img {
   position: absolute;
   top: -70px;
@@ -156,6 +179,7 @@ a {
   align-items: center;
   margin-top: 99px;
 }
+
 .discount-container {
   /* position: absolute; */
   width: 100%;
@@ -197,7 +221,7 @@ a {
 }
 
 .about-content {
-  display: flex; /* Flexbox for horizontal alignment */
+  display: flex; 
   justify-content: space-between;
   align-items: center;
   gap: 20px;
@@ -218,24 +242,24 @@ a {
 }
 
 .about-images {
-  position: relative; /* Set the parent to relative positioning */
-  width: 250px; /* Set a width for the container */
-  height: 250px; /* Set a height for the container */
+  position: relative; 
+  width: 250px; 
+  height: 250px; 
 }
 
 .about-images img {
-  position: absolute; /* Use absolute positioning for the images */
-  width: 450px; /* Set the width for the images */
-  height: 450px; /* Set the height for the images */
+  position: absolute; 
+  width: 450px; 
+  height: 450px; 
   border-radius: 10px;
   object-fit: cover;
   top: 100px;
 }
 
 .about-images img:last-child {
-  z-index: 0; /* Ensure the first image is below */
-  top: 100px; /* Adjust the position of the first image */
-  left: 100px; /* Align it to the left */
+  z-index: 0; 
+  top: 100px; 
+  left: 100px; 
   width: 500px;
   height: 130px;
   top: 450px;
@@ -246,7 +270,7 @@ a {
   background-color: #ffd700;
   padding: 40px 0;
   text-align: center;
-  margin-top: 300px;
+  margin-top: 200px;
 }
 
 .logo-categories img {
@@ -283,7 +307,7 @@ a {
   background-color: white;
   border-radius: 10px;
   padding: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Shadow effect */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
 }
 
 .category-item p {
