--- a/style.css
+++ b/style.css
@@ -12,19 +12,27 @@ body {
 }
 .menu {
   display: flex;
-  gap: 35px;
+  gap: 55px;
+  margin: 10px;
+  top: 0;
+  position: sticky;
+  padding: 10px 50px;
+  border-radius: 20px;
+  background: white;
+  z-index: 100;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
 }
 
 .menu a {
-  text-decoration: none; /* Menghilangkan garis bawah pada tautan */
-  color: black; /* Warna teks */
+  text-decoration: none;
+  color: black;
   font-weight: 500;
   font-size: 18px;
-  transition: color 0.3s; /* Transisi halus saat hover */
+  transition: color 0.3s;
 }
 
 .menu a:hover {
-  color: #007bff; /* Warna saat hover */
+  color: #ef5124;
 }
 .menu li {
   list-style: none;
@@ -35,14 +43,12 @@ body {
 }
 .navbar {
   display: flex;
-  position: sticky;
   align-items: center;
   justify-content: space-around;
   width: 100vw;
+  z-index: 1;
   padding: 10px 0;
-  background: white;
-  
-  /* gap: 50px; */
+  position: relative;
 }
 .navbar img {
   width: 70px;
@@ -105,6 +111,12 @@ a {
   border-bottom-left-radius: 20px;
   cursor: pointer;
 }
+
+#btn-login:hover,
+#btn-signup:hover {
+  background-color: #007bff;
+  color: white;
+}
 .mainvw h1 {
   font-family: "Super Bubble";
   color: #ef5124;
@@ -164,7 +176,7 @@ a {
   left: -80px;
 }
 
-.imgPromo{
+.imgPromo {
   width: 80px;
   position: absolute;
   bottom: 10px;
@@ -238,7 +250,7 @@ a {
 }
 
 .about-content {
-  display: flex; 
+  display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 20px;
@@ -259,24 +271,24 @@ a {
 }
 
 .about-images {
-  position: relative; 
-  width: 250px; 
-  height: 250px; 
+  position: relative;
+  width: 250px;
+  height: 250px;
 }
 
 .about-images img {
-  position: absolute; 
-  width: 450px; 
-  height: 450px; 
+  position: absolute;
+  width: 450px;
+  height: 450px;
   border-radius: 10px;
   object-fit: cover;
   top: 100px;
 }
 
 .about-images img:last-child {
-  z-index: 0; 
-  top: 100px; 
-  left: 100px; 
+  z-index: 0;
+  top: 100px;
+  left: 100px;
   width: 500px;
   height: 130px;
   top: 450px;
@@ -324,7 +336,7 @@ a {
   background-color: white;
   border-radius: 10px;
   padding: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .category-item p {
@@ -421,7 +433,7 @@ a {
   background-color: #173340;
   padding: 20px;
   border-radius: 10px;
-  width: 150px; 
+  width: 150px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -432,7 +444,7 @@ a {
   width: 150px;
   object-fit: contain;
 }
-  
+
 .product img {
   width: 100px;
   height: 100px;
@@ -442,7 +454,7 @@ a {
   left: 40%;
   transform: translateX(-50%);
   /* padding: 10px; */
-  border-radius: 10px; 
+  border-radius: 10px;
 }
 
 .product p {
@@ -528,7 +540,7 @@ a {
 .text-content p {
   font-size: 14px;
   color: #555;
-  font-family: 'Poppins';
+  font-family: "Poppins";
 }
 
 .price-time {
@@ -557,6 +569,50 @@ a {
   color: #1d3557;
 }
 
-.price-time span {
+.price-time span{
+  font-family: "Poppins";
+  background: white;
+  width: 90px;
+}
+
+.footer {
+  background: #fbf1f1;
+  text-align: left;
+  padding: 40px 20px;
   font-family: 'Poppins';
+  top: 70px;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.footer-content, .footer-address, .footer-maps {
+  flex-basis: 30%;
+  margin-bottom: 20px;
+}
+
+.footer-content h3, .footer-address h3, .footer-maps h3 {
+  margin-bottom: 15px;
+}
+
+.footer-content ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.footer-content ul li,
+.footer-address p {
+  margin-bottom: 10px;
+  font-size: 14px;
+}
+
+.footer-maps iframe {
+  border-radius: 10px;
+  width: 300px;
+  height: 200px;
+  border: 0;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
